* Only allow a single end shot credit for holding the shield flag - Bernt Hansen
* Do not inform hunters of stealthy prey - Ian Agar
* All scores are controlled completely by the server - Daniel Remenak
* Relabel player "email" string as "motto" - Jeff Makey
* Require TALK privilege for player motto to be broadcast - Jeff Makey


BZFlag 2.0.16  "No Foolin'" (2010-04-01)
----------------------------------------

* Fix command line options in Windows launcher - Scott Wichser
* Fix regression in protocol handling by server - Jeff Makey, Scott Wichser
* Add bullet tails as seen out the viewport - trepan
* Add observer mouse controls for roaming and tracking modes - trepan
* Add the /forceradar client-side command for observers - trepan
* Minor cleanup of source and build system - Jeff Makey
* Explicitly link to the dl library when needed - Jeff Makey
* Remove unused dependency on Xi library - Jeff Makey
* Clarify copyright assignment terms for developers - Jeff Myers
* Allow only one Enter message per player instance - Jeff Makey
* Add TimeLimit plugin - Steven Mertens
* Remove broken vocaliser and obsolete torBlock plugins - Jeff Myers


BZFlag 2.0.14  "This isn't the release you are looking for." (2010-02-15)
-------------------------------------------------------------------------

* Add Options -> Display -> AntiFlicker option - trepan
* Add Options -> Input -> Confine Mouse (MotionBox) - trepan
* Adjust advanced ground rendering for texture flicker - trepan
* Change the default stencil bitplanes to 1 to fix stencil shadows and various
  other stencil features - trepan
* Backport fix for /idbanlist and /hostbanlist crashes - trepan
* Add support for gcc-4.4 and libtool-2.2 - Jeff Makey
* Update to Microsoft Visual C++ 9 from 8.0 - Jeff Myers
* Update to directInput 8 from 7 - Jeff Myers
* Fix player ghosting failure - Steven Mertens
* Provide API support for using bz_moveFlag on team flags - Scott Wichser