@@ -86,7 +86,6 @@ public:
       rejoin,
       removePerms,
       replay,
-      requireIdentify,
       say,
       sendHelp,
       setAll,
@@ -154,7 +153,6 @@ public:
 	bool	hasCustomPerm(const char* right) const;
 
   bool	isRegistered() const;
-  bool	isIdentifyRequired();
   bool	isAllowedToEnter();
   bool	isVerified() const;
   uint8_t     getPlayerProperties();
